tests/invalidTest/other/const_const_unvalid_type128.q
# EXPECT type cannot be converted
def void errorType(){
    sint128 a = 170141183460469231731687303715884105728
}